# Projet-9

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.puml  docker-compose.yml  project_paths.py  pyproject.toml  rapport_technique.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py  schemas.py
evals/: run_ragas.py
evals/datasets/: golden.jsonl  questions.jsonl
evals/experiments/: ragas_eval_20260227_002259.csv  ragas_eval_20260227_002854.csv  ragas_eval_20260227_003830.csv  ragas_eval_v1_20260302_145526.csv  ragas_eval_v2_20260302_150159.csv  ragas_eval_v2_20260302_152201.csv  ragas_eval_v2_20260303_031257.csv  ragas_eval_v2_20260303_031756.csv  ragas_eval_v2_20260303_032156.csv  ragas_eval_v2_20260303_032632.csv  ragas_eval_v2_20260304_155915.csv  ragas_eval_v2_20260304_160533.csv
notebook/: analyse_exploratoire.ipynb
rag/: embeddings.py  engine.py  indexing.py  rag_chain.py
rag/moteur/: engine.py  prompting.py  rag_chain.py
scripts/: api_test.py  ask.py  ask_rag.py  build_index.py
tests/: test_api.py  test_golden_metrics;py  test_indexing.py  test_retrieval_min.py  test_smoke.py
